Added basic template back. Fixed transitive extensions

--- a/share/jupyter/nbconvert/templates/classic/base.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/base.html.j2
@@ -1,5 +1,5 @@
-{%- extends 'display_priority.j2' -%}
-{% from 'celltags.j2' import celltags %}
+{%- extends 'base/display_priority.j2' -%}
+{% from 'base/celltags.j2' import celltags %}
 
 {% block codecell %}
 <div class="cell border-box-sizing code_cell rendered{{ celltags(cell) }}">
