--- a/share/jupyter/nbconvert/templates/latex/base.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/base.tex.j2
@@ -4,7 +4,7 @@ functions. Figures, data_text,
 This template defines defines a default docclass, the inheriting class should
 override this.-=))
 
-((*- extends 'document_contents.tex.j2' -*))
+((*- extends 'latex/document_contents.tex.j2' -*))
 
 %===============================================================================
 % Abstract overrides
