--- a/share/jupyter/nbconvert/templates/latex/display_priority.j2
+++ b/share/jupyter/nbconvert/templates/latex/display_priority.j2
@@ -2,7 +2,7 @@
     To edit this file, please refer to ../../skeleton/README.md =))
 
 
-((*- extends 'null.j2' -*))
+((*- extends 'latex/null.j2' -*))
 
 ((=display data priority=))
 
