--- a/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/document_contents.tex.j2
@@ -1,4 +1,4 @@
-((*- extends 'display_priority.j2' -*))
+((*- extends 'latex/display_priority.j2' -*))
 
 %===============================================================================
 % Support blocks
