--- a/share/jupyter/nbconvert/templates/latex/style_jupyter.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/style_jupyter.tex.j2
@@ -1,5 +1,5 @@
 ((=- IPython input/output style -=))
-((*- extends 'base.tex.j2' -*))
+((*- extends 'latex/base.tex.j2' -*))
 
 ((*- block packages -*))
     \usepackage[breakable]{tcolorbox}
