--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -1,6 +1,6 @@
-{%- extends 'base.html.j2' -%}
-{% from 'mathjax.html.j2' import mathjax %}
-{% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
+{%- extends 'lab/base.html.j2' -%}
+{% from 'base/mathjax.html.j2' import mathjax %}
+{% from 'base/jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {%- block header -%}
 <!DOCTYPE html>
@@ -34,11 +34,11 @@
 {% endfor %}
 
 {% block notebook_css %}
-{{ resources.include_css("static/index.css") }}
+{{ resources.include_css("lab/static/index.css") }}
 {% if resources.theme == 'dark' %}
-    {{ resources.include_css("static/theme-dark.css") }}
+    {{ resources.include_css("lab/static/theme-dark.css") }}
 {% else %}
-    {{ resources.include_css("static/theme-light.css") }}
+    {{ resources.include_css("lab/static/theme-light.css") }}
 {% endif %}
 <style type="text/css">
 a.anchor-link {
