--- a/share/jupyter/nbconvert/templates/latex/report.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/report.tex.j2
@@ -1,7 +1,7 @@
 
 % Default to the notebook output style
 ((* if not cell_style is defined *))
-    ((* set cell_style = 'style_ipython.tex.j2' *))
+    ((* set cell_style = 'latex/style_ipython.tex.j2' *))
 ((* endif *))
 
 % Inherit from the specified cell style.
