--- a/share/jupyter/nbconvert/templates/latex/style_python.tex.j2
+++ b/share/jupyter/nbconvert/templates/latex/style_python.tex.j2
@@ -1,6 +1,6 @@
 ((= Python input/output style =))
 
-((*- extends 'base.tex.j2' -*))
+((*- extends 'latex/base.tex.j2' -*))
 
 % Custom definitions
 ((* block definitions *))
