--- a/share/jupyter/nbconvert/templates/base/mathjax.html.j2
+++ b/share/jupyter/nbconvert/templates/base/mathjax.html.j2
@@ -1,42 +1,40 @@
-
-{%- macro mathjax(url="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML-full,Safe") -%}
-    <!-- Load mathjax -->
-    <script src="{{url}}"> </script>
-    <!-- MathJax configuration -->
-    <script type="text/x-mathjax-config">
-    init_mathjax = function() {
-        if (window.MathJax) {
-        // MathJax loaded
-            MathJax.Hub.Config({
-                TeX: {
-                    equationNumbers: {
-                    autoNumber: "AMS",
-                    useLabelIds: true
-                    }
-                },
-                tex2jax: {
-                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-                    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-                    processEscapes: true,
-                    processEnvironments: true
-                },
-                displayAlign: 'center',
-                CommonHTML: {
-                    linebreaks: { 
-                    automatic: true 
-                    }
-                },
-                "HTML-CSS": {
-                    linebreaks: { 
-                    automatic: true 
-                    }
+<!-- Load mathjax -->
+<script src="{{ resources.mathjax_tex_url }}"></script>
+<script src="{{ resources.mathjax_safe_url }}"></script>
+<!-- MathJax configuration -->
+<script type="text/x-mathjax-config">
+init_mathjax = function() {
+    if (window.MathJax) {
+    // MathJax loaded
+        MathJax.Hub.Config({
+            TeX: {
+                equationNumbers: {
+                autoNumber: "AMS",
+                useLabelIds: true
                 }
-            });
-        
-            MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-        }
+            },
+            tex2jax: {
+                inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+                processEscapes: true,
+                processEnvironments: true
+            },
+            displayAlign: 'center',
+            CommonHTML: {
+                linebreaks: { 
+                automatic: true 
+                }
+            },
+            "HTML-CSS": {
+                linebreaks: { 
+                automatic: true 
+                }
+            }
+        });
+    
+        MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
     }
-    init_mathjax();
-    </script>
-    <!-- End of mathjax configuration -->
-{%- endmacro %}
+}
+init_mathjax();
+</script>
+<!-- End of mathjax configuration -->
