--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -43,23 +43,25 @@
 <style type="text/css">
 /* Misc */
 a.anchor-link {
-   display: none;
+  display: none;
 }
 
 .highlight  {
-    margin: 0.4em;
+  margin: 0.4em;
 }
 
 /* Input area styling */
 .jp-InputArea {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .jp-InputArea-editor {
-    overflow: hidden;
+  overflow: hidden;
 }
 
-/* Output area styling: using table instead of flexbox so that we can use break-inside property */
+/* Using table instead of flexbox so that we can use break-inside property */
+/* CSS rules under this comment should not be required anymore after we move to the JupyterLab 4.0 CSS */
+
 
 .jp-CodeCell.jp-mod-outputsScrolled .jp-OutputArea-prompt {
   min-width: calc(
@@ -95,19 +97,14 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
   width: 100%;
 }
 
-/* block wrapper: using block instead of flexbox so that we can use break-inside property
-   note: in the case of JupyterLab, wrappers also include collapsers, hence the flexbox.
- */
-
-.jp-Cell-inputWrapper, .jp-Cell-outputWrapper {
-  display: block;
-}
-
-/* Media print rules */
-
 @media print {
-  body {
-    margin: 0;
+  .jp-Collapser {
+    display: none;
+  }
+
+  .jp-Cell-inputWrapper,
+  .jp-Cell-outputWrapper {
+    display: block;
   }
 
   .jp-OutputArea-child {
