Updating to MathJax 3 Motivation:   - This pr starts to update the nbconvert app to use MathJax 3.     MathJax 3 does not use inline script execution to pull in its     libraries which improves the security story for using this library.

--- a/share/jupyter/nbconvert/templates/classic/index.html.j2
+++ b/share/jupyter/nbconvert/templates/classic/index.html.j2
@@ -1,5 +1,5 @@
 {%- extends 'base.html.j2' -%}
-{% from 'mathjax.html.j2' import mathjax %}
+{% from 'mathjax3.html.j2' import mathjax %}
 {% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {%- block header -%}
