--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -1,5 +1,5 @@
 {%- extends 'base.html.j2' -%}
-{% from 'mathjax.html.j2' import mathjax %}
+{% from 'mathjax3.html.j2' import mathjax %}
 {% from 'jupyter_widgets.html.j2' import jupyter_widgets %}
 
 {%- block header -%}
