--- a/share/jupyter/nbconvert/templates/lab/base.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/base.html.j2
@@ -176,9 +176,17 @@ width={{ width }}
 {%- if height is not none %}
 height={{ height }}
 {%- endif %}
+class="
 {%- if output | get_metadata('unconfined', 'image/png') %}
-class="unconfined"
+unconfined
 {%- endif %}
+{%- if output | get_metadata('needs_background', 'image/png') == 'light' %}
+jp-needs-light-background
+{%- endif %}
+{%- if output | get_metadata('needs_background', 'image/png') == 'dark' %}
+jp-needs-dark-background
+{%- endif %}
+"
 >
 </div>
 {%- endblock data_png %}
@@ -198,9 +206,17 @@ width={{ width }}
 {%- if height is not none %}
 height={{ height }}
 {%- endif %}
+class="
 {%- if output | get_metadata('unconfined', 'image/jpeg') %}
-class="unconfined"
+unconfined
 {%- endif %}
+{%- if output | get_metadata('needs_background', 'image/jpeg') == 'light' %}
+jp-needs-light-background
+{%- endif %}
+{%- if output | get_metadata('needs_background', 'image/jpeg') == 'dark' %}
+jp-needs-dark-background
+{%- endif %}
+"
 >
 </div>
 {%- endblock data_jpg %}
