Fix styling regression

--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -59,6 +59,10 @@ a.anchor-link {
   overflow: hidden;
 }
 
+.CodeMirror pre {
+  margin: 0;
+}
+
 /* Using table instead of flexbox so that we can use break-inside property */
 /* CSS rules under this comment should not be required anymore after we move to the JupyterLab 4.0 CSS */
 
