CodeMirror style bleed fix

--- a/share/jupyter/nbconvert/templates/lab/index.html.j2
+++ b/share/jupyter/nbconvert/templates/lab/index.html.j2
@@ -61,6 +61,7 @@ a.anchor-link {
 
 .CodeMirror pre {
   margin: 0;
+  padding: 0;
 }
 
 /* Using table instead of flexbox so that we can use break-inside property */
