Fix reveal format.
There was a number of issues with reveal formatting as pointed out in #1659.

I used the values provided here as a base but tweaked them a bit to use
jupyterlab css variables, and suggested corresponding changes upstream
to use variables incited of fixed values.

--- a/share/jupyter/nbconvert/templates/reveal/static/custom_reveal.css
+++ b/share/jupyter/nbconvert/templates/reveal/static/custom_reveal.css
@@ -2,6 +2,9 @@
 .reveal {
   font-size: 160%;
 }
+.reveal table {
+  font-size: var(--jp-ui-font-size1);
+}
 .reveal pre {
   width: inherit;
   padding: 0.4em;
@@ -43,6 +46,23 @@ div.output_area pre {
 div.jp-OutputPrompt {
   /* 5px right shift to account for margin in parent container */
   margin: 5px 5px 0 0;
+}
+
+.reveal div.highlight {
+  margin: 0;
+}
+
+.reveal div.highlight > pre {
+  margin: 0;
+  width: 100%;
+  font-size: var(--jp-code-font-size);
+}
+
+.reveal div.jp-OutputArea-output > pre {
+  margin: 0;
+  width: 90%;
+  font-size: var(--jp-code-font-size);
+  box-shadow: none;
 }
 
 /* Reveal navigation controls */
