--- a/share/jupyter/nbconvert/templates/base/celltags.j2
+++ b/share/jupyter/nbconvert/templates/base/celltags.j2
@@ -1,7 +1,7 @@
 {%- macro celltags(cell) -%}
     {% if cell.metadata.tags | length > 0 -%}
         {% for tag in (cell.metadata.tags) -%}
-            {{ (' celltag_' ~ tag) | clean_html -}}
+            {{ (' celltag_' ~ tag) | escape_html -}}
         {%- endfor -%}
     {%- endif %}
 {%- endmacro %}
